# miniapp-pars

./: .env.example  .gitignore  ACCESS_CONTROL.md  API_SETUP.md  COMPLETION_REPORT.md  Dockerfile  MIGRATION_GUIDE.md  MINIAPP_QUICK_START.md  MINIAPP_SETUP.md  MINIAPP_SETUP_GUIDE.md  MINIAPP_STATUS.md  NGROK_FIX_NOTES.md  NGROK_TEST_GUIDE.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  START_MYSQL.md  TONNEL_SETUP.md  bot.py  check_mysql.py  config.py  database.py  docker-compose.yml  getgems_wrapper.py  init_database.sql  init_db.py  mrktmp_wrapper.py  portalsmp.py  pyproject.toml  requirements.txt  run_bot.py  run_miniapp.bat  test_api.py  test_api_urls.py  test_miniapp.py  tonnelmp_wrapper.py
.github/workflows/: deploy-miniapp.yml
docker/: nginx.conf
gui/: README.md  __init__.py  server.py
gui/data/: catalog.json
gui/static/: app.js  style.css
gui/templates/: index.html
miniapp/: README.md  app.js  index.html  server.py  style.css
src/bot/: __init__.py  config.py  di.py  main.py
src/bot/handlers/: __init__.py
src/bot/keyboards/: __init__.py  builders.py
src/bot/middlewares/: __init__.py  access.py  errors.py  logging.py  throttling.py
src/bot/models/: __init__.py  dto.py  entities.py
src/bot/repositories/: __init__.py  base.py  gift_repo.py  marketplace_repo.py  price_filter_repo.py  user_repo.py
src/bot/services/: __init__.py  cache.py  database.py  parser.py
src/bot/tasks/: __init__.py  scheduler.py  workers.py
src/bot/utils/: __init__.py  decorators.py  formatters.py  pagination.py  validators.py
(+14 files in other folders)
